# TradingSim

./: ButtonInterface.cpp  BuyButton.h  CMakeLists.txt  MainBoard.cpp  MainBoard.h  SellButton.cpp  main.cpp
backend/: Company.cpp  Company.h  GameController.cpp  GameController.h  Stock.cpp  Stock.h  StockObserver.cpp  StockObserver.h  StockSubscriber.cpp  StockSubscriber.h  Transaction.cpp  Transaction.h  User.cpp  User.h  Wallet.cpp  Wallet.h
frontend/: ButtonInterface.h  BuyButton.cpp  BuyButton.h  MainBoard.cpp  MainBoard.h  SellButton.cpp  SellButton.h  StockChart.cpp  StockChart.h
